[project]
name = "pose-redirect-align"
version = "0.1.2"
description = "Align one pose image to another by matching subject scale and head position for ComfyUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
]

[project.urls]
Repository = "https://github.com/playboy-dongan/comfyui-pose-redirect-align"
"Bug Tracker" = "https://github.com/playboy-dongan/comfyui-pose-redirect-align/issues"

[tool.comfy]
PublisherId = "TODO_REPLACE_WITH_YOUR_REGISTRY_PUBLISHER_ID"
DisplayName = "姿态重定向对齐"
