[project]
name = "pose-redirect-align"
version = "0.1.4"
description = "Align one pose image to another by matching subject scale and head position for ComfyUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
]

[project.urls]
Repository = "https://github.com/playboy-dongan/comfyui-pose-redirect-align"
"Bug Tracker" = "https://github.com/playboy-dongan/comfyui-pose-redirect-align/issues"

[tool.comfy]
PublisherId = "playboy-dongan"
DisplayName = "\u59ff\u6001\u91cd\u5b9a\u5411\u5bf9\u9f50"
